intear-dex-management/tests/snapshots/writes__storage_deposit.snap
---
source: intear-dex-management/tests/writes.rs
expression: "cli.transaction(\"bob.near\",\n&[\"engine\", \"storage\", \"deposit\", \"bob.near\", \"0.01 NEAR\"]).await"
---
$ near-intear-dex-management engine storage deposit bob.near '0.01 NEAR' network-config sandbox sign-with-plaintext-private-key ed25519:2y9ToyGhuue7muH4Y5sStZpcGuQ7Wmaq5g5MnT1c2LSn3rr6rSJh5f99BBi4qr3umKDznj6LTV71XGtji1dadTbt send
exit code: 0
--- stdout ---
{
  "total": "10000000000000000000000",
  "available": "9150000000000000000000"
}
--- stderr ---
├  sandbox · signer bob.near · dex.intear.near
│  Deposit 0.01 NEAR into bob.near's storage balance on dex.intear.near
│  Actions: storage_deposit (0.01 NEAR, 10 Tgas)
├  Unsigned transaction:
│    signer_id:    bob.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  storage_deposit
│                       args:         {
│                                       "account_id": "bob.near"
│                                     }
│                       gas:          10.0 Tgas
│                       deposit:      0.01 NEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:   No logs
│    Logs [bob.near]:   No logs
│

Function execution return value (printed to stdout):


The "storage_deposit" call to <dex.intear.near> on behalf of <bob.near> succeeded.

├  ✓ Deposited 0.01 NEAR into bob.near's storage balance on dex.intear.near


Here is your console command if you need to script it or re-run:
    near intear-dex-management engine storage deposit bob.near '0.01 NEAR' network-config sandbox sign-with-plaintext-private-key ed25519:2y9ToyGhuue7muH4Y5sStZpcGuQ7Wmaq5g5MnT1c2LSn3rr6rSJh5f99BBi4qr3umKDznj6LTV71XGtji1dadTbt send
