intear-dex-management/tests/snapshots/writes__storage_withdraw_all.snap
---
source: intear-dex-management/tests/writes.rs
expression: "cli.transaction(\"bob.near\",\n&[\"engine\", \"storage\", \"withdraw\", \"bob.near\", \"all\"]).await"
---
$ near-intear-dex-management engine storage withdraw bob.near all network-config sandbox sign-with-plaintext-private-key ed25519:2y9ToyGhuue7muH4Y5sStZpcGuQ7Wmaq5g5MnT1c2LSn3rr6rSJh5f99BBi4qr3umKDznj6LTV71XGtji1dadTbt send
exit code: 0
--- stdout ---
{
  "total": "850000000000000000000",
  "available": "0"
}
--- stderr ---
├  sandbox · signer bob.near · dex.intear.near
│  Withdraw 0.00915 NEAR of bob.near's storage balance on dex.intear.near to its wallet
│  Actions: storage_withdraw (1 yoctoNEAR, 10 Tgas)
├  Unsigned transaction:
│    signer_id:    bob.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  storage_withdraw
│                       args:         {
│                                       "amount": null
│                                     }
│                       gas:          10.0 Tgas
│                       deposit:      1 yoctoNEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:   No logs
│    Logs [bob.near]:   No logs
│    Logs [bob.near]:   No logs
│    Logs [bob.near]:   No logs
│

Function execution return value (printed to stdout):


The "storage_withdraw" call to <dex.intear.near> on behalf of <bob.near> succeeded.

├  ✓ Withdrew 0.00915 NEAR of bob.near's storage balance on dex.intear.near to its wallet


Here is your console command if you need to script it or re-run:
    near intear-dex-management engine storage withdraw bob.near all network-config sandbox sign-with-plaintext-private-key ed25519:2y9ToyGhuue7muH4Y5sStZpcGuQ7Wmaq5g5MnT1c2LSn3rr6rSJh5f99BBi4qr3umKDznj6LTV71XGtji1dadTbt send
