intear-dex-management/tests/snapshots/writes__transfer.snap
---
source: intear-dex-management/tests/writes.rs
expression: "cli.transaction(\"alice.near\",\n&[\"engine\", \"transfer\", \"alice.near\", \"nep141:usdt.tether-token.near\",\n\"5 USDt\", \"to\", \"bob.near\",]).await"
---
$ near-intear-dex-management engine transfer alice.near nep141:usdt.tether-token.near '5 USDt' to bob.near network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 0
--- stdout ---
--- stderr ---
├  sandbox · signer alice.near · dex.intear.near
│  Transfer 5 USDt from alice.near to bob.near on dex.intear.near
│  Actions: execute_operations (1 yoctoNEAR, 15 Tgas)
├  Unsigned transaction:
│    signer_id:    alice.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  execute_operations
│                       args:         {
│                                       "operations": [
│                                         {
│                                           "TransferAsset": {
│                                             "to": {
│                                               "Account": "bob.near"
│                                             },
│                                             "asset_id": "nep141:usdt.tether-token.near",
│                                             "amount": "5000000"
│                                           }
│                                         }
│                                       ]
│                                     }
│                       gas:          15.0 Tgas
│                       deposit:      1 yoctoNEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:
│      Fully authorized: true
│      Executing operation 0
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"nep141:usdt.tether-token.near","balance":"243500000"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"bob.near","asset_id":"nep141:usdt.tether-token.near","balance":"6000000"}}
│    Logs [alice.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│


The "execute_operations" call to <dex.intear.near> on behalf of <alice.near> succeeded.

├  ✓ Transferred 5 USDt from alice.near to bob.near on dex.intear.near
│  alice.near now has 243.5 USDt on dex.intear.near
│  bob.near now has 6 USDt on dex.intear.near


Here is your console command if you need to script it or re-run:
    near intear-dex-management engine transfer alice.near nep141:usdt.tether-token.near '5 USDt' to bob.near network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
