intear-dex-management/tests/snapshots/writes__transfer_to_missing_dex.snap
---
source: intear-dex-management/tests/writes.rs
expression: "cli.transaction(\"alice.near\",\n&[\"engine\", \"transfer\", \"alice.near\", \"near\", \"0.1 NEAR\", \"to\",\n\"slimedragon.near/xykk\",]).await"
---
$ near-intear-dex-management engine transfer alice.near near '0.1 NEAR' to slimedragon.near/xykk network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine transfer alice.near near '0.1 NEAR' to slimedragon.near/xykk network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: Dex slimedragon.near/xykk doesn't exist on dex.intear.near (network sandbox)

Suggestion: Check the dex id, or choose a connection to the network it's on
